[package]
name = "color_please"
version = "0.1.0"
edition = "2018"
authors = ["electromeow"]
description = "A small library for terminal coloring and terminal text graphics control"
repository = "https://github.com/electromeow/color-please"
homepage = "https://github.com/electromeow/color-please"
license = "MIT"
license-file = "LICENSE"
keywords = ["ansi", "terminal", "color", "control"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1
[profile.release]
opt-level = 3
